--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -146,6 +146,8 @@ Il presente documento descrive le scelte tecniche, architetturali e tecnologiche
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		  1.0 & 23$\slash$01$\slash$2009  Verifica finale in preparazione al rilascio per RPP & Bizzotto Piero \\		
 		  		\hline
+		  0.9 & 23/01/2009 Correzioni in seguito a verifica & Dal Bosco Davide \\
+		  		\hline
 		  0.8 & 23/01/2009 Correzioni in seguito a verifica & Bizzotto Piero \\
 		  		\hline
 		  0.7 & 22/01/2009 Correzioni in seguito a verifica & Dissegna Stefano \\
