ST: aggiornata tabella modifiche

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -144,6 +144,12 @@ Il presente documento descrive le scelte tecniche, architetturali e tecnologiche
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+                  1.3 & 4$\slash$02$\slash$2009 Suddivisione del diagramma ApplicationLogic in tre parti & Dissegna Stefano \\
+				\hline
+                  1.2 & 4$\slash$02$\slash$2009 Aggiunti diagrammi per design pattern & Dissegna Stefano \\
+				\hline
+		  1.1 & 4$\slash$02$\slash$2009 Sistemati design pattern & Dissegna Stefano \\
+				\hline
 		  1.0 & 23$\slash$01$\slash$2009  Verifica finale in preparazione al rilascio per RPP & Bizzotto Piero \\		
 		  		\hline
 		  0.9 & 23/01/2009 Correzioni in seguito a verifica & Dal Bosco Davide \\
