--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -704,7 +704,7 @@ Nessuna.
 
 \subsezione{TextSize}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Rappresenta la grandezza di un testo.
+Rappresenta la grandezza di un testo. La grandezza viene espressa in pixel.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Deriva da \textit{TextProperty} e implementa \textit{CSSProperty}.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
@@ -714,7 +714,9 @@ Nessuna.
 
 \subsezione{BoundingRectangle}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Rappresenta la posizione e le dimensioni massime di una figura.
+Rappresenta la posizione e le dimensioni massime di una figura. Modificando il
+\textit{BoundingRectangle} \`e possibile spostare, ingrandire e deformare una figura.
+\`E responsabilit\`a delle singole figure, all'interno del metodo \textit{draw}, di disegnarsi all'interno dei limiti.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Implementa \textit{Property}. Ogni istanza di \textit{Figure} ne mantiene un'istanza.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
@@ -724,7 +726,7 @@ Nessuna.
 
 \subsezione{Circle}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Rappresenta un cerchio o un'ellisse.
+Rappresenta un cerchio o un'ellisse, a seconda che il proprio \textit{BoundingRectangle} sia un quadrato oppure un rettangolo.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Deriva da \textit{Figure} e ne implementa i metodi astratti. Mantiene un'istanza di \textit{FillColour}.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
@@ -734,7 +736,7 @@ Nessuna.
 
 \subsezione{Rectangle}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Rappresenta un rettangolo o un quadrato.
+Rappresenta un rettangolo od un quadrato.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Deriva da \textit{Figure} e ne implementa i metodi astratti. Mantiene un'istanza di \textit{FillColour}.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
@@ -764,7 +766,7 @@ Nessuna.
 
 \subsezione{FreeLine}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Rappresenta una linea a mano libera.
+Rappresenta una linea a mano libera. Viene implementata tramite delle curve di bezier brevi e ravvicinate tra di loro.
 \subsubsezione{Relazioni d'uso di altre componenti}
 Deriva da \textit{Line} e ne implementa i metodi astratti. Mantiene una lista di punti.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
@@ -778,7 +780,7 @@ Usata come base da \textit{BezierCurve}.
 \subsubsezione{Tipo, obiettivo e funzione del componente}
 Rappresenta una linea curva.
 \subsubsezione{Relazioni d'uso di altre componenti}
-Deriva da \textit{FreeLine}.
+Deriva da \textit{FreeLine}. A differenza di \textit{FreeLine} la lista di punti interni contiene un numero ridotto di punti.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
 Nessuna.
 \subsubsezione{Attivit\`a svolte e dati trattati}
